2.0.0 Upgrade Bootstrap from v4 to v5 Remove local Bootstrap, instead import it from webjar Delete useless datepicker Change default locale for postgres driver